force-app/main/default/objects/AuraComponentVisibilityControl__c/AuraComponentVisibilityControl__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will be used to control the visibility of Aura components.</description>
    <label>AuraComponentVisibilityControl</label>
</CustomObject>