force-app/main/default/objects/AuraComponentVisibilityControl__c/fields/HideOrderDetails__c.field-meta.xml
<CustomField>
    <fullName>HideOrderDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to hide Order Details section.</description>
    <label>HideOrderDetails</label>
    <type>Checkbox</type>
</CustomField>