force-app/main/default/objects/AuraComponentVisibilityControl__c/fields/HidePreviousOrders__c.field-meta.xml
<CustomField>
    <fullName>HidePreviousOrders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to hide Previous Orders component.</description>
    <label>HidePreviousOrders</label>
    <type>Checkbox</type>
</CustomField>