force-app/main/default/objects/AuraComponentVisibilityControl__c/fields/HideRestaurantDetails__c.field-meta.xml
<CustomField>
    <fullName>HideRestaurantDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to hide Restaurant Details section.</description>
    <label>HideRestaurantDetails</label>
    <type>Checkbox</type>
</CustomField>